--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/js-yaml": "^3.11.2",
     "@types/minimist": "^1.2.0",
     "@types/node": "^10.12.2",
+    "@types/supports-color": "^5.3.0",
     "jest": "^23.5.0",
     "standard": "^11.0.1",
     "ts-jest": "^23.10.4",
@@ -51,7 +52,8 @@
     "bunyan-format": "^0.2.1",
     "execa": "^1.0.0",
     "js-yaml": "^3.12.0",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "supports-color": "^5.5.0"
   },
   "jest": {
     "setupFiles": [
