--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "skipLibCheck": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
-    "declaration": true // enable this once all files are .ts and we can remove allowJs
+    "declaration": true
   },
   "include": [
     "src/**/*"
